// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Target Group with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_alb_target_group\\": {
      \\"testTargetGroup_ecs_target_group_A0C76C7F\\": {
        \\"deregistration_delay\\": 120,
        \\"name_prefix\\": \\"A1BC\\",
        \\"port\\": 80,
        \\"protocol\\": \\"HTTP\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"target_type\\": \\"ip\\",
        \\"vpc_id\\": \\"123\\",
        \\"health_check\\": [
          {
            \\"interval\\": 15,
            \\"path\\": \\"/\\",
            \\"protocol\\": \\"HTTP\\",
            \\"healthyThreshold\\": 5,
            \\"unhealthyThreshold\\": 3
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testTargetGroup/ecs_target_group\\",
            \\"uniqueId\\": \\"testTargetGroup_ecs_target_group_A0C76C7F\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Target Group without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_alb_target_group\\": {
      \\"testTargetGroup_ecs_target_group_A0C76C7F\\": {
        \\"deregistration_delay\\": 120,
        \\"name_prefix\\": \\"ABC\\",
        \\"port\\": 80,
        \\"protocol\\": \\"HTTP\\",
        \\"target_type\\": \\"ip\\",
        \\"vpc_id\\": \\"123\\",
        \\"health_check\\": [
          {
            \\"interval\\": 15,
            \\"path\\": \\"/\\",
            \\"protocol\\": \\"HTTP\\",
            \\"healthyThreshold\\": 5,
            \\"unhealthyThreshold\\": 3
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testTargetGroup/ecs_target_group\\",
            \\"uniqueId\\": \\"testTargetGroup_ecs_target_group_A0C76C7F\\"
          }
        }
      }
    }
  }
}"
`;
